# msi-wasm

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  rust-toolchain  webpack.config.js
.github/workflows/: ci.yml  deploy.yml
examples/: fileinfo.rs
src/: lib.rs
