[package]
name = "msi-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Heath Stewart (https://github.com/heaths)"]
repository = "https://github.com/heaths/msi-wasm"
license = "MIT"
description = """
Open and get information from Windows Installer packages (MSIs).
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"

[dependencies.msi]
version = "0.5.0"
path = "vendor/msi"
