[package]
name = "msi-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Heath Stewart (https://github.com/heaths)"]
repository = "https://github.com/heaths/msi-wasm"
license = "MIT"
description = """
Open and get information from Windows Installer packages (MSIs).
"""

[lib]
crate-type = ["cdylib"]

[patch.crates-io]
msi = { git = "https://github.com/heaths/rust-msi", branch = "issue13" }

[dependencies]
msi = "0.5.0"
serde = "1.0.152"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
